--- a/settings.html
+++ b/settings.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/index.css">
-    <title>Comand</title>
+    <title>Setting</title>
   </head>
-  <body class="background">
-    <h1 class="error-title">В разработке</h1>
-    <a class="back-btn__error" href="index.html">
-        Давай обратно
-    </a>
+  <body class="">
     <div id="root"></div>
+    <script type="module" src="/src/SettingsPage.tsx"></script>
   </body>
 </html>
